update .gitignore and .properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=WhisperBackend
+spring.datasource.url=jdbc:postgresql://192.144.14.39:5432/WhisperBackend
+spring.datasource.username=whisper_backend
+spring.datasource.password=bp7sHhRq
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
