--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=WhisperBackend
-spring.datasource.url=jdbc:postgresql://192.144.14.39:5432/WhisperBackend
+spring.datasource.url=jdbc:postgresql://localhost:5432/WhisperBackend
 spring.datasource.username=whisper_backend
 spring.datasource.password=bp7sHhRq
 spring.datasource.driver-class-name=org.postgresql.Driver
